--- a/src/app/blog/header/header.component.html
+++ b/src/app/blog/header/header.component.html
@@ -4,7 +4,7 @@
       <li [routerLink]="'./home'">Home</li>
       <li [routerLink]="'./docs'">Docs</li>
       <li [routerLink]="'./about'">About</li>
-      <li [routerLink]="'./auth'">Login</li>
+      <li [routerLink]="'./auth/login'">Log Out</li>
     </ul>
   </nav>
 </div>
