--- a/src/app/blog/header/header.component.css
+++ b/src/app/blog/header/header.component.css
@@ -17,3 +17,11 @@ li:hover{
 li:last-child{
   margin-left: auto;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+mat-drawer-container{
+  color: black;
+}
