--- a/src/app/blog/home/home.component.css
+++ b/src/app/blog/home/home.component.css
@@ -4,3 +4,14 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+
+
+mat-card{
+  height: 60vh;
+  display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+
